Added icons and cleaned up components.css

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -3,10 +3,12 @@
     --grey: #e2e8f0;
     --blue: #1992d4;
     --yellow: #f0b429;
+    --card-corners: 10px;
 }
 
 body {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 p,
@@ -18,4 +20,9 @@ h5,
 h6 {
     margin: 0px;
     margin-bottom: 5px;
+}
+
+h1 {
+    font-size: 2rem;
+    font-weight: 500;
 }
