--- a/stylesheets/components.css
+++ b/stylesheets/components.css
@@ -6,16 +6,16 @@
     border-radius: 50px;
     width: 100%;
     height: 1rem;
-    padding: 3px 15px;
+    padding: 5px 15px;
 }
 
 .project-card {
     background-color: white;
     border-left: 8px solid var(--yellow);
-    border-radius: 5px;
-    padding: 1vw;
+    border-radius: var(--card-corners);
+    padding: 2vw 1vw;
     display: grid;
-    grid-template-rows: 4fr 1fr;
+    grid-template-rows: 1fr auto;
 }
 
 .project-card .icons {
@@ -26,8 +26,8 @@
 
 .anoun-card {
     background-color: white;
-    border-radius: 5px;
-    padding: 1vw;
+    border-radius: var(--card-corners);
+    padding: 2vw;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -55,3 +55,17 @@
 .trending-card-txt span {
     grid-row: 1 / 3;
 }
+
+.menu span img,
+.links span img {
+    width: 20px;
+}
+
+.trending-card-txt img {
+    width: 52px;
+}
+
+.icons img {
+    width: 20px;
+}
+
