--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -77,7 +77,7 @@
     padding: 3vw 8vw;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: auto 3fr;
+    /* grid-template-rows: auto 3fr; */
     gap: 2vw;
 }
 
