--- a/stylesheets/components.css
+++ b/stylesheets/components.css
@@ -13,7 +13,7 @@
     background-color: white;
     border-left: 8px solid var(--yellow);
     border-radius: var(--card-corners);
-    padding: 2vw 1vw;
+    padding: 2vw 1vw 10px 1vw;
     display: grid;
     grid-template-rows: 1fr auto;
 }
@@ -22,12 +22,13 @@
     display: flex;
     gap: 1vw;
     justify-content: flex-end;
+    margin-top: 10px;
 }
 
 .anoun-card {
     background-color: white;
     border-radius: var(--card-corners);
-    padding: 2vw;
+    padding: 1.5vw;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -74,15 +75,37 @@ input[type="button"] {
     border-radius: 50px;
     background-color: var(--blue);
     color: white;
-    padding: 8px 24px;
+    padding: 8px 1.5vw;
     font-weight: 600;
 }
 
-.trending-card h3 {
+.trending-div h3 {
     margin-bottom: 1vw;
 }
 
 .anoun p {
     font-size: clamp(12px, 14px, 16px);
     color: #9d9d9d;
+}
+
+.trending-card {
+    background-color: white;
+    border-radius: var(--card-corners);
+    padding: 1.5vw 1vw;
+}
+
+.anoun-card,
+.trending-card,
+.project-card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* soft shadow */
+    transition: box-shadow 0.3s ease;
+    /* smooth hover effect */
+}
+
+.anoun-card:hover,
+.trending-card:hover,
+.project-card:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    /* slightly deeper on hover */
 }
