--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -2,9 +2,8 @@
 
 .grid {
     display: grid;
-    grid-template-columns: [first-col] 1fr 4fr [end-col];
+    grid-template-columns: [first-col] 1fr 5fr [end-col];
     grid-template-rows: [first-row]1fr 5fr [end-row];
-
     height: 100vh;
 }
 
@@ -15,7 +14,7 @@
     display: flex;
     flex-direction: column;
     gap: 2vw;
-    padding: 2vw 5vw;
+    padding: 2vw 3vw;
 }
 
 .sidebar ul {
@@ -38,7 +37,7 @@
 
 .header {
     background-color: white;
-    padding: 1vw 8vw;
+    padding: 1vw 3vw;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto auto;
@@ -55,7 +54,7 @@
 .search-2 {
     display: flex;
     justify-content: flex-end;
-    gap: 2vw;
+    gap: 1vw;
     align-items: center;
 }
 
@@ -74,26 +73,34 @@
 
 .content {
     background-color: var(--grey);
-    padding: 3vw 8vw;
+    padding: 3vw 3vw;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     /* grid-template-rows: auto 3fr; */
     gap: 2vw;
 }
 
-.projects {
+/* .projects {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto repeat(3, 1fr);
-    gap: 1vw;
-}
+    gap: 2vw;
+} */
 
 .projects .heading {
     grid-column: 1 / 3;
+    margin-bottom: 1vw;
 }
 
 .anoun {
     display: flex;
     flex-direction: column;
     gap: 1vw;
+}
+
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25vw, 1fr));
+    grid-template-rows: repeat(3, 1fr);
+    gap: 2vw;
 }
